# mockprock

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  openedx.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
mockprock/: backend.js  backend.py  commands.py  db.py  desktop_views.py  server.py
mockprock/rest_api_client/: __init__.py  auth.py  client.py
mockprock/templates/: dashboard.html  download.html
requirements/: base.in  server.in  server.txt  testing.in  testing.txt
static/: index.js
