[tool.poetry]
name = "mockprock"
version = "0.1.0"
description = "Mock proctoring backend for edX"
authors = ["Dave St.Germain <dstgermain@edx.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pickleshare = "*"
pyjwt = "*"
edx_rest_api_client = { git = "https://github.com/edx/edx-rest-api-client.git", branch = "b7e8ee6bff7d4c211ba0b4668649b20c3e9ccbc8" }
flask = "^1.0"
requests = "^2.20"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
