[tool.poetry]
name = "mockprock"
version = "0.1.0"
description = "Mock proctoring backend for edX"
authors = ["Dave St.Germain <dstgermain@edx.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pickleshare = "*"
PyJWT = "*"
edx_rest_api_client = "^1.8"
flask = "^1.0"
requests = "^2.20"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
