[tool.poetry]
name = "mockprock"
version = "0.5"
description = "Mock proctoring backend for edX"
authors = ["Dave St.Germain <dstgermain@edx.org>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
PyJWT = "*"
edx_rest_api_client = "^1.9.1"
flask = "^1.0"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
